# resp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs  cliff.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
benches/: README.md  bresp_comparison.rs  comparison.rs  parsing.rs  setup_redis_c_bench.sh  unsafe_experiment.rs
examples/: breadis.rs  parse.rs  ping.rs
experiments/: README.md
experiments/bench/: Cargo.toml
experiments/bench/benches/: three_way.rs
experiments/bresp/: Cargo.toml  README.md
experiments/bresp/src/: lib.rs
experiments/proto-resp/: Cargo.toml  README.md  build.rs
experiments/proto-resp/proto/: resp.proto
experiments/proto-resp/src/: lib.rs
experiments/throughput/: Cargo.toml
experiments/throughput/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/: .gitattributes
fuzz/fuzz_targets/: fuzz_resp2_equivalence.rs  fuzz_resp2_parse.rs  fuzz_resp2_roundtrip.rs  fuzz_resp2_streaming.rs  fuzz_resp3_equivalence.rs  fuzz_resp3_parse.rs  fuzz_resp3_roundtrip.rs  fuzz_resp3_streaming.rs  fuzz_resp3_streaming_sequence.rs
src/: bresp.rs  cluster.rs  codec.rs  lib.rs  proto_resp.rs  resp2.rs  resp2_codec.rs  resp2_unchecked.rs  resp3.rs  resp3_codec.rs  resp3_unchecked.rs
tests/: property.rs  resp2.rs  resp3.rs
