[package]
name = "resp-rs"
version = "0.1.5"
edition = "2024"
description = "Zero-copy RESP2 and RESP3 protocol parser and serializer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/resp-rs"
homepage = "https://github.com/joshrotenberg/resp-rs"
documentation = "https://docs.rs/resp-rs"
readme = "README.md"
keywords = ["redis", "resp", "protocol", "parser", "resp3"]
categories = ["parser-implementations", "network-programming"]
rust-version = "1.85"

[features]
unsafe-internals = []
codec = ["dep:tokio-util", "dep:tokio"]

[dependencies]
bytes = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
redis-protocol = { version = "6", features = ["resp2", "resp3", "bytes"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "unsafe_experiment"
harness = false
